// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Form > events > submit 1`] = `
{
  "firstError": "",
  "validateResult": true,
}
`;

exports[`Form > events > validate 1`] = `
{
  "firstError": "姓名必填",
  "validateResult": {
    "age": [
      {
        "message": "age必填",
        "required": true,
        "result": false,
      },
    ],
    "name": [
      {
        "message": "姓名必填",
        "required": true,
        "result": false,
      },
    ],
  },
}
`;

exports[`Form > events > validate 2`] = `
{
  "firstError": "姓名必填",
  "validateResult": {
    "age": [
      {
        "message": "age必填",
        "required": true,
        "result": false,
      },
    ],
    "name": [
      {
        "message": "姓名必填",
        "required": true,
        "result": false,
      },
    ],
  },
}
`;

exports[`Form > events > validate 3`] = `
{
  "firstError": "age必填",
  "validateResult": {
    "age": [
      {
        "message": "age必填",
        "required": true,
        "result": false,
      },
    ],
  },
}
`;

exports[`Form > events > validate 4`] = `
{
  "firstError": "",
  "validateResult": true,
}
`;

exports[`Form > instanceFunctions > clearValidate 1`] = `
[
  DOMWrapper {
    "isDisabled": [Function],
    "wrapperElement": <div
      class="t-input__extra"
      title="姓名必填"
    >
      姓名必填
    </div>,
  },
  DOMWrapper {
    "isDisabled": [Function],
    "wrapperElement": <div
      class="t-input__extra"
      title="age必填"
    >
      age必填
    </div>,
  },
]
`;

exports[`Form > instanceFunctions > clearValidate 2`] = `
[
  DOMWrapper {
    "isDisabled": [Function],
    "wrapperElement": <div
      class="t-input__extra"
      title="age必填"
    >
      age必填
    </div>,
  },
]
`;

exports[`Form > instanceFunctions > reset 1`] = `
[
  DOMWrapper {
    "isDisabled": [Function],
    "wrapperElement": <div
      class="t-input__extra"
      title="姓名必填"
    >
      姓名必填
    </div>,
  },
  DOMWrapper {
    "isDisabled": [Function],
    "wrapperElement": <div
      class="t-input__extra"
      title="age必填"
    >
      age必填
    </div>,
  },
]
`;

exports[`Form > instanceFunctions > reset 2`] = `
[
  DOMWrapper {
    "isDisabled": [Function],
    "wrapperElement": <div
      class="t-input__extra"
      title="姓名校验失败"
    >
      姓名校验失败
    </div>,
  },
  DOMWrapper {
    "isDisabled": [Function],
    "wrapperElement": <div
      class="t-input__extra"
      title="年龄校验失败"
    >
      年龄校验失败
    </div>,
  },
]
`;

exports[`Form > instanceFunctions > reset 3`] = `
[
  DOMWrapper {
    "isDisabled": [Function],
    "wrapperElement": <div
      class="t-input__extra"
      title="年龄校验失败"
    >
      年龄校验失败
    </div>,
  },
]
`;

exports[`Form > instanceFunctions > validate 1`] = `
{
  "age": [
    {
      "message": "age必填",
      "required": true,
      "result": false,
      "trigger": "blur",
    },
  ],
  "name": [
    {
      "message": "姓名必填",
      "required": true,
      "result": false,
      "trigger": "blur",
    },
  ],
}
`;

exports[`Form > instanceFunctions > validate 2`] = `
[
  DOMWrapper {
    "isDisabled": [Function],
    "wrapperElement": <div
      class="t-input__extra"
      title="姓名必填"
    >
      姓名必填
    </div>,
  },
  DOMWrapper {
    "isDisabled": [Function],
    "wrapperElement": <div
      class="t-input__extra"
      title="age必填"
    >
      age必填
    </div>,
  },
]
`;

exports[`Form > instanceFunctions > validate 3`] = `true`;

exports[`Form > instanceFunctions > validate 4`] = `
{
  "name": [
    {
      "message": "姓名校验失败",
      "result": false,
      "trigger": "blur",
      "validator": [Function],
    },
  ],
}
`;

exports[`Form > instanceFunctions > validate 5`] = `
{
  "age": [
    {
      "message": "年龄校验失败",
      "result": false,
      "trigger": "change",
      "validator": [Function],
    },
  ],
  "name": [
    {
      "message": "姓名校验失败",
      "result": false,
      "trigger": "blur",
      "validator": [Function],
    },
  ],
}
`;

exports[`Form > instanceFunctions > validate 6`] = `
{
  "name": [
    {
      "message": "姓名校验失败",
      "result": false,
      "trigger": "blur",
      "validator": [Function],
    },
  ],
}
`;

exports[`Form > instanceFunctions > validateOnly 1`] = `
{
  "age": [
    {
      "message": "age必填",
      "required": true,
      "result": false,
      "trigger": "blur",
    },
  ],
  "name": [
    {
      "message": "姓名必填",
      "required": true,
      "result": false,
      "trigger": "blur",
    },
  ],
}
`;

exports[`Form > instanceFunctions > validateOnly 2`] = `
[
  DOMWrapper {
    "isDisabled": [Function],
    "wrapperElement": <div
      class="t-input__extra"
      title="姓名必填"
    >
      姓名必填
    </div>,
  },
  DOMWrapper {
    "isDisabled": [Function],
    "wrapperElement": <div
      class="t-input__extra"
      title="age必填"
    >
      age必填
    </div>,
  },
]
`;

exports[`Form > instanceFunctions > validateOnly 3`] = `true`;

exports[`Form > instanceFunctions > validateOnly 4`] = `
[
  DOMWrapper {
    "isDisabled": [Function],
    "wrapperElement": <div
      class="t-input__extra"
      title="姓名必填"
    >
      姓名必填
    </div>,
  },
  DOMWrapper {
    "isDisabled": [Function],
    "wrapperElement": <div
      class="t-input__extra"
      title="age必填"
    >
      age必填
    </div>,
  },
]
`;

exports[`Form > instanceFunctions > validateOnly 5`] = `
{
  "name": [
    {
      "message": "姓名校验失败",
      "result": false,
      "trigger": "blur",
      "validator": [Function],
    },
  ],
}
`;

exports[`Form > instanceFunctions > validateOnly 6`] = `
{
  "name": [
    {
      "message": "姓名校验失败",
      "result": false,
      "trigger": "blur",
      "validator": [Function],
    },
  ],
}
`;
